# kakfa-spark

./: .env  README.md  consumer.py  docker-compose.yml  producer.py  pyproject.toml  requirements.txt  topic.py
src/streaming/: run.sh  spark_process.py
